Entity framework - connected to database and updated all the methods

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=dotnet;User=SA;Password=hjdsghk%$67G;TrustServerCertificate=true;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
