Authentication using jwt tokein  added

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=dotnet;User=SA;Password=hjdsghk%$67G;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost,1433;Database=dotnet;User=SA;Password={****};TrustServerCertificate=true;"
+  },
+  "AppSettings": {
+    "Token": "e5e7f1b1-6b4c-4c6f-9b2b-1e4b3b6b6f2f"
   },
 
   "Logging": {
